--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -7,6 +7,23 @@
     -b.cell :general do
       -if @animal.picture.exists?
         .picture=image_tag(@animal.picture.url(:identity))
+        -if @animal.born_at
+          .info
+            %span.title=Animal.human_attribute_name(:age)
+            -#%span.value=distance_of_time_in_words(@animal.born_at, (@animal.dead_at||Time.now)) rescue @animal.born_at.l
+            %span.value
+              -seconds = (@animal.dead_at||Time.now) - @animal.born_at
+              -vals = []
+              -if (seconds/1.year).round > 0
+                -vals << "labels.x_years".t(:count => (seconds/1.year).round)
+                -seconds -= 1.year * (seconds/1.year).round
+              -if (seconds/1.month).round > 0
+                -vals << "labels.x_months".t(:count => (seconds/1.month).round)
+                -seconds -= 1.month * (seconds/1.month).round
+              -if (seconds/1.day).round > 0
+                -vals << "labels.x_days".t(:count => (seconds/1.day).round)
+                -seconds -= 1.day * (seconds/1.day).round
+              =vals.join(", ")
         -if @animal.mother
           .info
             %span.title=Animal.human_attribute_name(:mother)
