--- a/app/views/backend/land_parcels/index.html.haml
+++ b/app/views/backend/land_parcels/index.html.haml
@@ -5,6 +5,17 @@
   -t.link :new
   -t.link :merge, {}, :remote=>true, :method=>:post, "data-confirm" => tl(:are_you_sure), "data-with"=>"td.plot.selected input", "data-redirect"=>true, "data-type"=>"text"
 
+
+=beehive do |b|
+  -b.tabbox do
+    -b.cell :map do
+      %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :viewBox => LandParcel.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
+        -LandParcel.find_each do |land_parcel|
+          %a{'xlink:href' => backend_land_parcel_url(land_parcel)}
+            %path{:d => land_parcel.shape_svg_path, :style => "stroke-width: 2px; stroke: red; fill: #AAA", :title => land_parcel.name}
+    -b.cell :list do
+      =list
+
 -unit = Unit.find_by_base("m2")
 -# TODO Review presentation of landparcels
 -#=form_tag do
@@ -31,3 +42,4 @@
               %ul.operations
                 -for operation in land_parcel.operations.find(:all, :conditions=>["COALESCE(moved_on, planned_on) < ? ", session[:viewed_on]], :limit=>5)
                   %li=link_to(operation.name, {:action=>:show, :controller=>:operations, :id=>operation.id})
+
