Enhances land parcels styles adding hover style and background colors

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -665,6 +665,22 @@ span.rad, label.radio {
 
 
 
+
+
+svg {
+  fill: #EEE;
+  background: #EEE;
+  path {
+    fill: #AAA;
+  }
+  a:hover path {
+    fill: $active-color;
+  }
+}
+
+
+
+
 /* Pop overs */
 
 .kujaku.popover {
