--- a/app/views/backend/land_parcels/index.html.haml
+++ b/app/views/backend/land_parcels/index.html.haml
@@ -12,7 +12,7 @@
       %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :viewBox => LandParcel.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
         -LandParcel.find_each do |land_parcel|
           %a{'xlink:href' => backend_land_parcel_url(land_parcel)}
-            %path{:d => land_parcel.shape_svg_path, :style => "stroke-width: 2px; stroke: red; fill: #AAA", :title => land_parcel.name}
+            %path{:d => land_parcel.shape_svg_path, :title => land_parcel.name}
     -b.cell :list do
       =list
 
