--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -48,4 +48,8 @@
 
     -b.cell(:childrens) do
       =list(:children)
+    -b.cell(:places) do
+      =list(:place)
+    -b.cell(:groups) do
+      =list(:group)
 
