--- a/app/views/layouts/backend.html.haml
+++ b/app/views/layouts/backend.html.haml
@@ -9,6 +9,7 @@
     =stylesheet_link_tag :application
     =theme_link_tag(@current_theme)
     =javascript_include_tag :application
+    %script{:src => "http://www.google.com/jsapi"}
   -expiration = {}
   -expiration = {"timeout" => session[:expiration], "timeout-href" => renew_session_url(:user_name => current_user.user_name)} if current_user and session[:expiration].to_i>0
   %body{:data => expiration}
