--- a/app/views/backend/products/_form.html.haml
+++ b/app/views/backend/products/_form.html.haml
@@ -1,11 +1,8 @@
 =field_set do # partie info general de l entité animal
-  =f.association :nature
-  =f.input :name , :hint => "le nom de votre animal"# affiche le champ name de l entité animal avec une infos derriere
-  =f.input :sex # affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l entité animal
-  =f.input :reproductor
+  =f.input :name
   =f.input :born_at
   =f.input :work_number
-  =f.input :number, :placeholder => 'FR + DEPT + 8 chiffres'
+  =f.input :number
   =f.input :description # affiche le champ description formaté en zone de texte
   =f.input :picture
   =image_tag(@product.picture.url(:thumb))
